add song and artist option for rpc status

--- a/AMWin-RichPresence/SettingsWindow.xaml
+++ b/AMWin-RichPresence/SettingsWindow.xaml
@@ -54,6 +54,7 @@
                                 <ComboBoxItem>Artist only</ComboBoxItem>
                                 <ComboBoxItem>Artist and album</ComboBoxItem>
                                 <ComboBoxItem>Album only</ComboBoxItem>
+                                <ComboBoxItem>Artist and song</ComboBoxItem>
                             </ComboBox>
                         </StackPanel>
 
